# vcard2

./: Cargo.toml
src/: error.rs  lib.rs  unvalidated_vcard.rs  vcard.rs  vcard_entity.rs
src/property/: email.rs  fn_.rs  kind.rs  mod.rs  tel.rs  version.rs
src/property/parameter/: mod.rs  pref.rs  tel_type.rs
tests/: invalid.rs  reading.rs  writing.rs
tests/data/invalid/: missing_begin.vcf  missing_end.vcf  missing_fn.vcf  missing_version.vcf  version_3.vcf
tests/data/valid/: frank.json  frank.vcf  robert.json  robert.vcf  sasha.json  sasha.vcf
