[package]
name = "vcard4"
version = "0.1.0"
authors = ["Titouan Real <titouan.real@gmail.com>"]
edition = "2021"
description = """VCard parser."""
repository = "https://github.com/TitouanReal/vcard2"
license = "Apache-2.0 OR MIT"

[dependencies]
ical = { version = "0.11", features = ["serde-derive"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.11"
tracing = "0.1.41"
vec1 = { version = "1.12", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0"

[patch.crates-io]
ical = { git = "https://github.com/TitouanReal/ical-rs.git", features = [
    "serde-derive",
] }
